tests/snapshots/fixtures_snapshot__fixtures__raw_data__csharp__date_format_qtrr_sas7bdat.snap
---
source: tests/fixtures_snapshot.rs
expression: snapshot.clone()
---
{
  "columns": [
    "QTRR"
  ],
  "row_count": 1,
  "rows": [
    [
      {
        "kind": "number",
        "value": 21847.0
      }
    ]
  ]
}
